--- a/login.html
+++ b/login.html
@@ -35,16 +35,16 @@
                     <input type="text" placeholder="Email o telefono" id="username">
                     <label for="password">Contraseña</label>
                     <input type="password" placeholder="Contraseña" id="password">
-                    <button>Ingresar</button>
+                    <button onclick="ingresar()">Ingresar</button>
                 </div>
                 <div id="Registro">
                     <h3>Registro</h3>
                     <span>Nombre</span>
                     <input type="text" value="" placeholder="Nombre:" id="NombreRegistro">
                     <span>Correo Electrónico</span>
-                    <input type="text" value="" placeholder="Email:" id="EmailRegistro" required>
+                    <input type="text" value="" placeholder="Email:" id="EmailRegistro" >
                     <span>Contraseña</span>
-                    <input type="password" value="" placeholder="Password:" id="ClaveRegistro" required>
+                    <input type="password" value="" placeholder="Password:" id="ClaveRegistro" >
                     <button onclick="registrar()">Registrar</button>
                 </div>
             </div>
@@ -56,7 +56,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-auth-compat.js"></script>
 
     <!--Importaciones Configuracion-->
-    <script src="js/configuracion.js"></script>
+    <script src="js/firebase-con.js"></script>
     <script src="js/login.js"></script>
     <script src="js/scripts.js"></script>
 </body>
