--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="preload" href="styles/normalize.css">
     <link href="styles/normalize.css" rel="stylesheet">
     <link rel="preload" href="styles/styles.css">
-    <link href="styles/styles.css" rel="stylesheet">
+    <link href="style/style.css" rel="stylesheet">
 </head>
 
 <body id="bodys">
@@ -53,7 +53,7 @@
         </div>
 
     </div>
-    <script src="scripts/script.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
