--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                 <input type="text" placeholder="Email o telefono" id="username" required>
                 <label for="password">Contraseña</label>
                 <input type="password" placeholder="Contraseña" id="password" required>
-                <button id="btnIngresar">Ingresar</button>
+                <button id="btnIngresar" onclick="ingresar()">Ingresar</button>
             </div>
             <div id="Registro">
                 <h3>Registro</h3>
@@ -48,12 +48,20 @@
                 <label for="pago6">Maestro</label>
                 <input type="radio" id="Rol2" name="opcion" value="Maestro">
             </div> 
-                <button>Registrar</button>
+                <button onclick="registrar()">Registrar</button>
             </div>
         </div>
 
     </div>
-    <script src="js/scripts.js"></script>
 </body>
+<!--Importaciones Firebase-->
+<script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-auth-compat.js"></script>
+
+<script src="js/firebase-con.js"></script>
+<script src="js/controller.js"></script>
+<script src="js/scripts.js"></script>
+<script src="js/login.js"></script>
 
 </html>
