Actualizacion de configuracion

--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
 <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-auth-compat.js"></script>
 
-<script src="js/firebase-con.js"></script>
+<script src="js/configuracion.js"></script>
 <script src="js/controller.js"></script>
 <script src="js/scripts.js"></script>
 <script src="js/login.js"></script>
