--- a/indexMaestro.html
+++ b/indexMaestro.html
@@ -94,6 +94,9 @@
             <!-- -->
         </div>
 
+        <div id="examen">
+        </div>
+
         <div class="contenedorAgregaMateria" id="contMateria">
             <div id="frm">
                 <h3>Agregar Materia</h3>
