Acomodando input Materia en el contendor que genera examenes

--- a/indexMaestro.html
+++ b/indexMaestro.html
@@ -68,7 +68,7 @@
         <div id="contenedorAccciones">
             <div id="questionsContainer">
                 <label for="materiasList">Materia: </label>
-                <input list="listMateria" id="materiasList"><br>
+                <input list="listMateria" id="materiasList" class="nomMateria"><br>
                 <datalist id="listMateria"></datalist>
                 <label for="tituloExamen">Titulo: </label>
                 <input type="text" id="tituloExamen">
