Metodos para Eliminar y Cerrar Sesion

--- a/indexMaestro.html
+++ b/indexMaestro.html
@@ -47,7 +47,7 @@
                 <li><a href="#" onclick="muestraCreaExamen()">Genera Nuevo Examen</a></li>
                 <li><a href="#" onclick="muestraExamenes()">Examenes</a></li>
                 <li><a href="#" onclick="verAgregarMateria()">Agregar materia</a></li>
-                <li><a href="#" onclick="" class="cerrarSesion">Cerrar Sesion</a></li>
+                <li><a href="#" onclick="cerrarSesion()" class="cerrarSesion">Cerrar Sesion</a></li>
             </ul>
         </div>
     </nav>
