Cerrar Sesion Alumno

--- a/indexAlumno.html
+++ b/indexAlumno.html
@@ -32,7 +32,7 @@
             <ul>
                 <li><a href="#" onclick="muestraRegistroClave()" id="separa">Agregar Materia</a></li>
                 <li><a href="#" onclick="muestraMateriasAlu()">Materias</a></li>
-                <li><a href="#" onclick="" class="cerrarSesion">Cerrar Sesion</a></li>
+                <li><a href="#" onclick="cerrarSesion()" class="cerrarSesion">Cerrar Sesion</a></li>
             </ul>
         </div>
     </nav>
