--- a/indexAlumno.html
+++ b/indexAlumno.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MindExam</title>
 
-    <link href="stylesalumno/circulos.css" rel="stylesheet">
-    <link href="stylesalumno/menulateral.css" rel="stylesheet">
-    <link href="stylesalumno/materia-tarjetas.css" rel="stylesheet">
-    <link href="stylesalumno/tarjetas-examenes.css" rel="stylesheet">
-    <link href="stylesalumno/estiloExamenContestar.css" rel="stylesheet">
+    <link href="stylesAlumno/circulos.css" rel="stylesheet">
+    <link href="stylesAlumno/menulateral.css" rel="stylesheet">
+    <link href="stylesAlumno/materia-tarjetas.css" rel="stylesheet">
+    <link href="stylesAlumno/tarjetas-examenes.css" rel="stylesheet">
+    <link href="stylesAlumno/estiloExamenContestar.css" rel="stylesheet">
 
 </head>
 
@@ -74,9 +74,9 @@
     <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-auth-compat.js"></script>
 
     <script src="js/firebase-con.js"></script>
-    <script src="scriptsalumno/controlaMenu.js"></script>
-    <script src="scriptsalumno/clave.js"></script>
-    <script src="scriptsAlumno/examenAlumno.js"></script>
+    <script src="scriptsAlumno/controlaMenu.js"></script>
+    <script src="scriptsAlumno/clave.js"></script>
+    <script src="scriptsAlumno/examenalumno.js"></script>
 
 </body>
 
